@@ -1,3 +1,7 @@
+* Mon Sep 26 2016 Jeanne Greulich<jeanne.greulich@onxypoint.com> - 5.1.0-0
+- Allow user to specify syslog facility and priority for audit record
+  messages.
+
 * Mon Aug 29 2016 Ralph Wright <ralph.wright@onyxpoint.com> - 5.0.4-0
 - Added booleans to toggle sections of audit rules.
 
